# AskOnYourData

./: LICENSE  README.md  ask.py  data.json  pyproject.toml
chat-your-data/: cli_app.py  ex_vectorstore_tibillet.pkl  ingest_data.py  pyproject.toml  query_data.py  tibillet_all_text.txt
